--- a/web2/css/crm_influencers.css
+++ b/web2/css/crm_influencers.css
@@ -7,21 +7,46 @@
 
 @import url('https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i|Oswald:300,400,700&subset=latin-ext');
 
+
 #fondo{
 	width: 100%;
-	height: 580px;
+	height: 700px;
 	position: absolute;
+  overflow: hidden;
 }
 
 #amarillo{
 	width: 100%;
-		height: 580px;
+		height: 700px;
 
 	position: absolute;
 	background-color:#FFDD00;
+  overflow: hidden;
 }
-
+#contenido{
+  overflow: hidden;
+}
 /* menu inicio*/
+
+.header-1 {
+  position: absolute;
+  right: 40px;
+  bottom: 30px;
+  z-index: 2;
+  width: 386px;
+  padding-left: 56px;
+  background-image: url(http://uploads.webflow.com/5317d67d660658b254000454/534e23fb94be38d269000057_arrow-left-up.png);
+  background-position: 0% 15%;
+  background-size: 47px;
+  background-repeat: no-repeat;
+  opacity: 0.75;
+  font-family: "Lato" !important;
+  color: black;
+  font-size: 20px;
+  line-height: 30px;
+  letter-spacing: 0.7px;
+  text-align: center;
+}
 
 .wrapper-menu{padding:140px;}
 
@@ -31,13 +56,31 @@ h1{ font-family: "Oswald";
   margin-right: 0px;
   margin-left: 0px;
   color: black;
-  font-size: 80px;
+  font-size: 90px;
   line-height: 90px;
   font-weight: 800;
-  padding-bottom: 40px;
-
-
+  padding-bottom: 20px;
 }
+.animacion1{ font-family: "Oswald";
+  position: relative;
+  z-index: 1;
+  top: -1000px;
+  margin-right: 0px;
+  margin-left: 0px;
+  color: black;
+  font-size: 90px;
+  line-height: 90px;
+  font-weight: 800;
+  padding-bottom: 20px;
+  opacity: 0;
+}
+.animacion2{ 
+  opacity: 0;
+}
+.animacion3{ 
+  opacity: 0;
+}
+
 
 
 .wrapper-menu a{  position: relative;
@@ -52,7 +95,21 @@ text-decoration: none;
 
 a:hover{border-bottom: 4px solid white;}
 
+::-webkit-input-placeholder {
+   color: black;
+}
 
+:-moz-placeholder { /* Firefox 18- */
+   color: black;  
+}
+
+::-moz-placeholder {  /* Firefox 19+ */
+   color: black;  
+}
+
+:-ms-input-placeholder {  
+   color: black;  
+}
 
 
 /*header */
@@ -133,6 +190,17 @@ font-size: 14px;
 letter-spacing: 3px;
 }
 
+.header-1 input{width:200px;
+height:50px;
+background-color:white;
+color:white;
+font-family: "Lato";
+font-size: 18px;
+letter-spacing: 1px;
+text-align: center;
+font-style: italic;
+}
+
 button:hover{background-color:white;
 color:black;}
 
@@ -161,3 +229,5 @@ color:white;
 font-family: "Oswald";
 font-size: 14px;
 letter-spacing: 3px;}
+
+
