--- a/web8/css/crm_influencers.css
+++ b/web8/css/crm_influencers.css
@@ -13,6 +13,7 @@
 	height: 100%;
 	position: absolute;
   overflow: hidden;
+
 }
 
 #amarillo{
@@ -48,10 +49,10 @@
 
 h1{
   font-family: "Oswald";
-padding-top: 100px;
   z-index: 1;
   margin-right: 0px;
   margin-left: 0px;
+  padding-top: 5%;
   color: black;
   font-size: 90px;
   line-height: 90px;
@@ -211,57 +212,59 @@ color:black;}
 
 /*Resultado-busqueda-¿guardar lista?*/
 
-#wrap-result{
-position:absolute;
-left:100px;
-top:140px;
-/*background-color:red;*/
-margin:0 auto;}
 
-
-#wrap-result2{
-position:absolute;
-left:100px;
-top:140px;
-/*background-color:red;*/
-margin:0 auto;}
 
 #resultadolista{
 margin: 0 auto;
 height: 500px;
 }
 
+/*re-formulario de resultado_busqueda.php*/
+
+#form_resultado{margin-top:40px;
+}
+#form_resultado input,select{border:none;
+border-bottom: 2px solid black;
+
+font-family: "Oswald";
+font-size:16px;
+background:transparent;
+text-align: center;
+color:black;}
+
+#form_resultado label{font-family: "Oswald";
+font-size:16px;}
+
 #wrap-result table{
   border-collapse: collapse;
   border-radius: 30px;
-  font-family: "Lato", "Arial";
-
-
-}
+  font-family: "Lato", "Arial";}
 
 #wrap-result table td,th{
   padding: 30px;
   border-bottom: 2px solid white;
 text-align: center;}
 
-
+.wrap-result a{
+text-decoration: none;
+width:200px;
+height:50px;
+background-color:black;
+color:#FFDD00;
+font-family: "Oswald";
+font-size: 14px;
+letter-spacing: 3px;}
 
 #resultadolista table{
   border-collapse: collapse;
   border-radius: 30px;
   height:300px;
-  font-family: "Lato", "Arial";
-
-
-}
+  font-family: "Lato", "Arial";}
 
 #resultadolista table td .perfil{
 text-decoration: none;
 color: black;
-font-weight: bold;
-
-}
-
+font-weight: bold;}
 
 #resultadolista table td .perfil:hover{
   border-bottom: 2px solid black;}
@@ -270,8 +273,6 @@ font-weight: bold;
   padding: 30px;
   border-bottom: 2px solid white;
 text-align: center;}
-
-
 
 #resultadolista, #wrap-result .tr100{
  background-color: #ffdd00
@@ -297,15 +298,7 @@ background-color:  #ffe433;
 
 
 
-.wrap-result a{
-text-decoration: none;
-width:200px;
-height:50px;
-background-color:black;
-color:#FFDD00;
-font-family: "Oswald";
-font-size: 14px;
-letter-spacing: 3px;}
+
 
 
 
@@ -420,6 +413,12 @@ footer{
 
 @media (max-width: 600px) {
 
+header{
+  width: 100%;
+  height: 300px;
+  background-color: white;
+}
+
 #fondo{
   width: 100%;
  height: 1000px;
@@ -439,6 +438,12 @@ footer{
  line-height: 60px;
  margin-top: -100px;
 }
+
+.xs{font-size:60px !important;
+ line-height: 60px;
+
+}
+
 
 
 .animacion1{ font-family: "Oswald";
